a few tweaks to the UI: - removed TRLN logo from masthead in trln search context - made number of location facets configurable - fixed height of twiddle links in location facets that were clipping descenders

--- a/app/assets/stylesheets/trln_argon/trln_argon_shared.scss
+++ b/app/assets/stylesheets/trln_argon/trln_argon_shared.scss
@@ -94,21 +94,6 @@ body {
 
 #header-navbar .navbar-brand { background: transparent image_url($institution-logo) no-repeat top left; }
 
-body {
-  &.blacklight-trln,
-  &.blacklight-advanced_trln {
-    border-top: 7px solid $trln-green; // visual aid for TRLN context
-
-    .navbar-static-top {
-      border-width: 3px 0 0;
-    }
-
-    #header-navbar .navbar-brand {
-      background: transparent image_url($trln-logo) no-repeat top left;
-    }
-  }
-}
-
 #header-navbar {
 
     .navbar-brand {
@@ -605,13 +590,13 @@ dd[aria-expanded=true] .expandable-content-controls .show-control.less {
       text-overflow: ellipsis;
       overflow: hidden;
       /*height: 1.2em;*/
-      height: 15px;
+      height: 18px;
       padding-bottom: 0;
       white-space: nowrap;
 
       &:hover {
-        overflow: visible;
-        white-space: nowrap;
+        /*overflow: visible;
+        white-space: nowrap;*/
       }
 
     }
@@ -665,13 +650,13 @@ dd[aria-expanded=true] .expandable-content-controls .show-control.less {
       text-overflow: ellipsis;
       overflow: hidden;
       /*height: 1.2em;*/
-      height: 15px;
+      height: 18px;
       padding-bottom: 0;
       white-space: nowrap;
 
       &:hover {
-        overflow: visible;
-        white-space: nowrap;
+        /*overflow: visible;
+        white-space: nowrap;*/
       }
 
     }
